[gd_scene load_steps=10 format=3 uid="uid://bxedc7ad2qpd6"]

[ext_resource type="Script" uid="uid://dvdp507qejqwf" path="res://scripts/main_menu.gd" id="1_2wh52"]
[ext_resource type="Theme" uid="uid://du2jkyh4el8aw" path="res://ui/GameSceneTheme.tres" id="1_yqorp"]
[ext_resource type="FontFile" uid="uid://u7ldl4fncbjv" path="res://fonts/m6x11.ttf" id="2_0ykhv"]
[ext_resource type="PackedScene" uid="uid://bnom3ilambl0v" path="res://prefabs/CustomButton.tscn" id="4_826wr"]

[sub_resource type="LabelSettings" id="LabelSettings_2wh52"]
font = ExtResource("2_0ykhv")
font_size = 160
outline_size = 40
outline_color = Color(0, 0, 0, 1)
shadow_size = 40
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(0, 10)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0ykhv"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_2wh52"]
normal = Vector2(5, -1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ow34m"]
normal = Vector2(-5, -1)

[sub_resource type="Environment" id="Environment_ow34m"]
background_mode = 3
glow_enabled = true
glow_blend_mode = 1

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_2wh52")

[node name="SpawnPoint" type="Marker2D" parent="."]
process_mode = 3
position = Vector2(943, -207)

[node name="Menu" type="CenterContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
theme = ExtResource("1_yqorp")

[node name="ColorRect" type="ColorRect" parent="Menu"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 2
color = Color(0, 0, 0, 0.219608)

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2
text = "INCRO
PACHINKO"
label_settings = SubResource("LabelSettings_2wh52")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Menu/VBoxContainer"]
layout_mode = 2

[node name="LoadBtn" parent="Menu/VBoxContainer" instance=ExtResource("4_826wr")]
layout_mode = 2
label = "LOAD GAME"

[node name="StartBtn" parent="Menu/VBoxContainer" instance=ExtResource("4_826wr")]
layout_mode = 2
label = "START GAME"

[node name="OptionsBtn" parent="Menu/VBoxContainer" instance=ExtResource("4_826wr")]
layout_mode = 2
label = "OPTIONS"
variant = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, 1089)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_0ykhv")

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2(-35, 251)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2(0, 670)
shape = SubResource("WorldBoundaryShape2D_2wh52")

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2(29, 251)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2(1932, 670)
shape = SubResource("WorldBoundaryShape2D_ow34m")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ow34m")
